tests/should_succeed/local_import.jou
from "./foo/bar.jou" import bar

def main() -> int:
    bar()  # Output: Bar Bar
    return 0
