tests/syntax_error/local_vars_comma_assign.jou
def main() -> int:
    x, y,  # Error: expected ':' and a type after it (example: "foo, bar: int"), got ','
